<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/family"
    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintTop_toTopOf="@+id/constraintLayout"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button-tuan"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.226" />

    <Button
        android:id="@+id/button2"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/sing_in"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.308" />

    <Button
        android:id="@+id/button"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/dang_ky"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.408" />

    <Button
        android:id="@+id/button3"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/close"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.514" />

    <Button
        android:id="@+id/button5"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/Log_in"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.625" />

    <Button
        android:id="@+id/button6"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/Resgister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.73" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Enter Email Address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:autofillHints="" />


</androidx.constraintlayout.widget.ConstraintLayout>